Customs routes for positionInCellar
