# src/api-docs/openapi.json
@@ -1249,6 +1249,248 @@
         ]
       }
     },
+    "/positionInCellar/byCellarId/{cellarId}": {
+      "get": {
+        "tags": [
+          "positionInCellar"
+        ],
+        "summary": "Gets all positionInCellars by cellarId",
+        "description": "Returns a list containing all positionInCellars.",
+        "parameters": [
+          {
+            "name": "cellarId",
+            "in": "path",
+            "description": "The id of the cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "description": "The number of items to skip before starting to collect the result set",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "The numbers of items to return",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of PositionInCellar",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PositionInCellar"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/positionInCellar/byCellarAndBottleId/{cellarId}/{bottleId}": {
+      "get": {
+        "tags": [
+          "positionInCellar"
+        ],
+        "summary": "Gets all positionInCellars by cellarId and bottleId",
+        "description": "Returns a list containing all positionInCellars.",
+        "parameters": [
+          {
+            "name": "cellarId",
+            "in": "path",
+            "description": "The id of the cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "bottleId",
+            "in": "path",
+            "description": "The id of the bottle",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "description": "The number of items to skip before starting to collect the result set",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "The numbers of items to return",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of PositionInCellar",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PositionInCellar"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/positionInCellar/byCellarIdAndPosition/{cellarId}/{positionX}/{positionY}": {
+      "get": {
+        "tags": [
+          "positionInCellar"
+        ],
+        "summary": "Gets all positionInCellars by cellarId and position of the bottle in cellar",
+        "description": "Returns the wanted positionInCellar.",
+        "parameters": [
+          {
+            "name": "cellarId",
+            "in": "path",
+            "description": "The id of the cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "positionX",
+            "in": "path",
+            "description": "The positionX of the bottle in cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "positionY",
+            "in": "path",
+            "description": "The positionY of the bottle in cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The wanted positionInCellar",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PositionInCellar"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "positionInCellar"
+        ],
+        "summary": "delete one positionInCellar by cellarId and position of the bottle in cellar",
+        "description": "delete a positionInCellar by cellarId and position of the bottle in cellar.",
+        "parameters": [
+          {
+            "name": "cellarId",
+            "in": "path",
+            "description": "The id of the cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "positionX",
+            "in": "path",
+            "description": "The positionX of the bottle in cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "positionY",
+            "in": "path",
+            "description": "The positionY of the bottle in cellar",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Request response"
+          },
+          "401": {
+            "description": "Access token is missing or invalid",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
     "/positionInCellar/{id}": {
       "get": {
         "tags": [
